# VigilantGuard

./: .gitignore  Cargo.toml  LICENSE  rustfmt.toml
crates/vg_core/: Cargo.toml  build.rs
crates/vg_core/src/: db.rs  guardian.rs  interceptor.rs  macros.rs  main.rs  packet.rs
crates/vg_core/src/file/: config_file.rs  ip_filter_file.rs  lang_file.rs  mod.rs
crates/vg_core/src/file/default/: config.toml  lang.toml
crates/vg_core/src/interceptor/: front.rs  gate.rs  interceptor.rs  middle.rs  mod.rs
crates/vg_core/src/logger/: appender.rs  mod.rs  terminal.rs
crates/vg_core/src/packet/: c2s.rs  mod.rs  s2c.rs
crates/vg_macro/: Cargo.toml
crates/vg_macro/src/: lib.rs
src/: interceptor.rs  macros.rs  main.rs  packet.rs
