[package]
name = "vigilant_guard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atomic_float = "0.1.0"
chrono = "0.4.24"
once_cell = "1.17.1"
serde = "1.0.160"
serde_json = "1.0.95"
tokio = { version = "1.27.0", features = ["full", "rt"] }
valence_protocol = { git = "https://github.com/valence-rs/valence" }
