[package]
name = "vg_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
atomic_float = "0.1.0"
chrono = "0.4.24"
lazy_static = "1.4.0"
log = "0.4.17"
log4rs = "1.2.0"
once_cell = "1.17.1"
reqwest = { version = "0.11.16", features = ["blocking"] }
rustyline = "11.0.0"
serde_json = "1.0.95"
tokio = { version = "1.27.0", features = ["full", "rt"] }
valence_protocol = { git = "https://github.com/valence-rs/valence" }
vg_macro = { path = "../vg_macro" }
